// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should render empty 1`] = `
<div
  className="Header__HeaderSty-x4ek9t-0 ctjVwy"
>
  <div
    className="container"
  >
    <div
      className="Header__HeaderContainer-x4ek9t-1 fzAqQm"
    >
      <div
        className="Header__HeaderItem-x4ek9t-2 jLKXMa"
      >
        <div
          data-mock="Link"
        >
          
        </div>
      </div>
      <div
        className="Header__HeaderItem-x4ek9t-2 hoLYPK"
      >
        <div
          className="Header__HeaderItemMenu-x4ek9t-3 imOZsT"
        >
          <div
            data-mock="MainMenu"
          >
            {
  "location": {}
}
          </div>
        </div>
      </div>
    </div>
    <div
      className="Header__HeaderSeparator-x4ek9t-4 eeJXhx"
    />
  </div>
</div>
`;

exports[`Header should render with title 1`] = `
<div
  className="Header__HeaderSty-x4ek9t-0 ctjVwy"
>
  <div
    className="container"
  >
    <div
      className="Header__HeaderContainer-x4ek9t-1 fzAqQm"
    >
      <div
        className="Header__HeaderItem-x4ek9t-2 jLKXMa"
      >
        <div
          data-mock="Link"
        >
          Test title
        </div>
      </div>
      <div
        className="Header__HeaderItem-x4ek9t-2 hoLYPK"
      >
        <div
          className="Header__HeaderItemMenu-x4ek9t-3 imOZsT"
        >
          <div
            data-mock="MainMenu"
          >
            {
  "location": {}
}
          </div>
        </div>
      </div>
    </div>
    <div
      className="Header__HeaderSeparator-x4ek9t-4 eeJXhx"
    />
  </div>
</div>
`;
